--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,12 +4,13 @@
 
 .main {
   /* min-height: 100vh; */
-  padding: 4rem 0;
+  padding: 2rem 0;
+  margin-bottom: 4rem;
   flex: 1;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .footer {
